# tmu-rust

./: .gitignore  .gitmodules  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  PORTING_STATUS.md  README.md  car_complete_extraction.json  car_detection_report.txt
.github/workflows/: auto-tag.yml  release.yml  rust.yml
benches/: throughput.rs
examples/: absorb_timing.rs  autoencoder.rs  bench_autoencoder.rs  bench_training.rs  breast_cancer.rs  coalesced.rs  coalesced_autoencoder.rs  composite.rs  convolutional.rs  convolutional_2d.rs  dp_vs_exact.rs  gpu_probe.rs  gpu_vs_cpu_bench.rs  gpu_xor.rs  grow_scaling.rs  growing.rs  imdb.rs  interpretability.rs  mitre_ttp_classifier.rs  mnist.rs  mordor_autoencoder.rs  ndr_flows.rs  noisy_xor.rs  parallel_scaling.rs  regression.rs  save_load.rs  sparse.rs  sparse_vs_dense.rs  sysmon.rs  sysmon_mordor.rs  sysmon_shared.rs  sysmon_windows.rs  type_iii_demo.rs  xor.rs
scripts/: absorb_timing_tmu.py  bench_autoencoder.py  compare.sh  compare_all.py  compare_new.sh  compare_new_models.py  compare_tmu.py  gen_shared_data.py  prepare_breast_cancer.py  prepare_imdb.py  prepare_mnist.py
src/: booleanizer.rs  clause_inspect.rs  data.rs  encoder.rs  lib.rs  main.rs  rng.rs  serial.rs
src/clause_bank/: dense.rs  mod.rs  sparse.rs
src/data/: mod.rs
src/gpu/: buffers.rs  context.rs  gpu_tests.rs  mod.rs  vanilla.rs
src/gpu/shaders/: common.wgsl  infer.wgsl  rng_test.wgsl  train.wgsl  train_dp.wgsl
src/models/: mod.rs
src/models/autoencoder/: coalesced_autoencoder.rs  mod.rs  vanilla_autoencoder.rs
src/models/classification/: coalesced_classifier.rs  composite_classifier.rs  convolutional_classifier.rs  mod.rs  sparse_classifier.rs  vanilla_classifier.rs
src/models/regression/: mod.rs  vanilla_regressor.rs
tests/: gpu_parity.rs
