[package]
name = "tmu-rs"
version = "1.0.0"
edition = "2021"
description = "Bit-packed weighted multiclass Tsetlin Machine in Rust, with bit-parallel/multi-threaded training, a fast booleanizer, and ports of the TMU classification demos."
license = "MIT"
repository = "https://github.com/ozzykampha/tmu-rust"
readme = "README.md"
keywords = ["tsetlin", "machine-learning", "classifier", "tmu", "automata"]
categories = ["science"]
autoexamples = false

[dependencies]
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"  # examples/sysmon_windows.rs: parse real Mordor NDJSON logs

[features]
default = ["serde"]
parallel = ["dep:rayon"]
# Enable `save`/`load` for models and the encoder (serde + bincode).
serde = ["dep:serde", "dep:bincode"]

[[bin]]
name = "tmu-rs"
path = "src/main.rs"

[lib]
name = "tmu_rs"
path = "src/lib.rs"

# --- ports of the TMU classification demos ---
[[example]]
name = "xor"               # TMU XORDemo
path = "examples/xor.rs"

[[example]]
name = "noisy_xor"         # TMU NoisyXORDemo
path = "examples/noisy_xor.rs"

[[example]]
name = "interpretability"  # TMU InterpretabilityDemo
path = "examples/interpretability.rs"

[[example]]
name = "coalesced"         # TMU TMCoalescedClassifier demo
path = "examples/coalesced.rs"

[[example]]
name = "sparse"            # TMSparseClassifier: absorbing actions on noisy XOR
path = "examples/sparse.rs"

[[example]]
name = "sparse_vs_dense"   # dense vs sparse head-to-head (accuracy / memory / speed)
path = "examples/sparse_vs_dense.rs"

[[example]]
name = "breast_cancer"     # TMU BreastCancerDemo
path = "examples/breast_cancer.rs"

[[example]]
name = "mnist"             # TMU MNISTDemo / MNISTDemoWeightedClauses
path = "examples/mnist.rs"

[[example]]
name = "imdb"              # TMU IMDbTextCategorizationDemo
path = "examples/imdb.rs"

[[example]]
name = "ndr_flows"         # extra: network-flow detection (not in TMU)
path = "examples/ndr_flows.rs"

[[example]]
name = "sysmon"            # extra: Sysmon Event ID 1 -> col::val tokens (not in TMU)
path = "examples/sysmon.rs"

[[example]]
name = "sysmon_windows"    # extra: 10-min log windows -> presence+count features (not in TMU)
path = "examples/sysmon_windows.rs"


[[example]]
name = "save_load"         # train → save → load → predict/resume round-trip
path = "examples/save_load.rs"
required-features = ["serde"]

[[example]]
name = "absorb_timing"
path = "examples/absorb_timing.rs"

[[example]]
name = "bench_training"
path = "examples/bench_training.rs"

# --- autoencoder demo + benchmark ---
[[example]]
name = "autoencoder"       # TMAutoEncoder: reconstruct binary input (not in original TMU examples)
path = "examples/autoencoder.rs"

[[example]]
name = "bench_autoencoder" # TMAutoEncoder: throughput + accuracy benchmark vs Python TMU
path = "examples/bench_autoencoder.rs"

[[example]]
name = "coalesced_autoencoder" # TMCoalescedAutoEncoder: shared clause bank reconstruction demo
path = "examples/coalesced_autoencoder.rs"

[[example]]
name = "regression"           # TMRegressor: continuous output from binary features
path = "examples/regression.rs"

[[example]]
name = "convolutional"        # ConvolutionalTM: receptive-field clauses over 1D input
path = "examples/convolutional.rs"

[[example]]
name = "convolutional_2d"     # ConvolutionalTM: 2-D patch sliding over 2×4 images
path = "examples/convolutional_2d.rs"

[[example]]
name = "composite"            # TMCompositeClassifier: ensemble of TsetlinMachines
path = "examples/composite.rs"

[[example]]
name = "mordor_autoencoder"   # TMAutoEncoder + TMCoalescedAutoEncoder: unsupervised anomaly detection on Mordor Sysmon events
path = "examples/mordor_autoencoder.rs"

[[example]]
name = "type_iii_demo"        # Type III feedback: clause sparsity demo vs baseline
path = "examples/type_iii_demo.rs"

[[example]]
name = "growing"              # Growing TM: extend encoder with new tokens, grow the machine, keep learned automata
path = "examples/growing.rs"

[[example]]
name = "grow_scaling"         # Growing at scale: dense vs sparse literal-space growth + parallel effect
path = "examples/grow_scaling.rs"

[[example]]
name = "parallel_scaling"     # Training ms/epoch vs clauses × literals; work-aware Rayon gate effect
path = "examples/parallel_scaling.rs"

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false

# Build with: RUSTFLAGS="-C target-cpu=native" cargo build --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
